# caph

./: +  .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  dependencies.json  dockerfile  ourt  package-lock.json  tables.sql  test.test
carina/: Cargo.toml  REFACTORING.md
carina/db/: blueprints.carina  item_materials.carina  items.carina  stations.carina
carina/src/: blueprint.rs  file.rs  id_name.rs  item.rs  item_material.rs  lib.rs  market_order.rs  market_order_info.rs  region.rs  station.rs
cli/: Cargo.toml
cli/src/: database.rs  error.rs  lib.rs  main.rs  tools.rs
cli/src/tools/: buy.rs  misc.rs  sell.rs  sell_ores.rs
collector/: Cargo.toml  sqlx-data.json  systemd.service
collector/migrations/: 20221223011531_init.sql
collector/src/: character.rs  error.rs  lib.rs  main.rs  market.rs  market_v2.rs  metrics.rs  postgres.rs  sde.rs  server.rs  tables.sql  time.rs
collector_v2/: Cargo.toml  systemd.service
collector_v2/src/: error.rs  main.rs  market.rs  sde.rs  time.rs
connector/: Cargo.toml
connector/src/: asset.rs  blueprint.rs  character.rs  client.rs  corporation.rs  error.rs  lib.rs  macros.rs  market.rs  reprocess.rs  schematic.rs  station.rs  system.rs  unique_name.rs  universe.rs  zip.rs
core/: Cargo.toml
core/src/: +  lib.rs  macros.rs  market.rs  project.rs
corp_bot/: Cargo.toml
corp_bot/src/: main.rs
db/: Cargo.toml  systemd.service
db/src/: alliance_fittings.rs  blueprint.rs  character_asset.rs  character_blueprint.rs  character_fitting.rs  corporation_blueprint.rs  id_name.rs  item.rs  item_dogma.rs  item_material.rs  leftright.rs  lib.rs  login.rs  market_info.rs  market_order.rs  market_order_info.rs  market_order_v2.rs  market_price.rs  name.rs  project.rs  region.rs  reprocess.rs  schematic.rs  station.rs  system_region.rs  user.rs
db/src/blueprint/: fetch.rs  insert.rs  storage.rs
db/src/id_name/: fetch.rs  fetch_bulk.rs  insert.rs  storage.rs
db/src/item/: fetch.rs  insert.rs  storage.rs
db/src/item_material/: fetch.rs  insert.rs  storage.rs
db/src/market_order/: fetch.rs  fetch_item_ids.rs  fetch_latest.rs  fetch_raw.rs  insert.rs  storage.rs
db/src/market_order_info/: fetch.rs  fetch_bulk.rs  insert.rs  storage.rs
db/src/market_order_v2/: fetch.rs  insert.rs  storage.rs
db/src/region/: fetch.rs  insert.rs  storage.rs
db/src/station/: fetch.rs  insert.rs  storage.rs
db/src/system_region/: fetch.rs  insert.rs  storage.rs
db/src/user/: fetch.rs  insert.rs  storage.rs
db_v2/: Cargo.toml
db_v2/src/: blueprint.rs  character_asset.rs  corporation_blueprint.rs  industry_cost.rs  lib.rs  market_info.rs  market_order.rs  system_region.rs  user.rs
eve_api/: Cargo.toml
eve_api/src/: alliance.rs  character.rs  contracts.rs  dogma.rs  error.rs  eve_client.rs  lib.rs  market.rs  oauth.rs  region.rs  routes.rs
eve_api/src/universe/: ancestries.rs  asteroid_belts.rs  conversion.rs  graphics.rs  moons.rs  races.rs  regions.rs  stargates.rs  stars.rs  types.rs
eve_data_wrapper/: Cargo.toml  README.md
eve_data_wrapper/examples/: basic.rs
eve_data_wrapper/src/: error.rs  eve_client.rs  lib.rs  macros.rs  service.rs
eve_data_wrapper/src/service/: blueprint.rs  category_ids.rs  character.rs  corporation.rs  dogma.rs  group_ids.rs  industry.rs  market.rs  meta_group.rs  name.rs  planet_schematic.rs  race.rs  research_agent.rs  skin.rs  station.rs  system.rs  typ.rs  unique_name.rs
eve_sde_parser/: Cargo.toml
eve_sde_parser/src/: lib.rs  parser.rs  reader.rs
eve_sde_parser/src/parser/: blueprint.rs  category_ids.rs  constellation.rs  error.rs  group_ids.rs  reader.rs  region.rs  result.rs  schematic.rs  solarsystem.rs  station.rs  type_data.rs  type_ids.rs  type_material.rs  unique_name.rs
eve_sde_parser2/: Cargo.toml
eve_sde_parser2/examples/: basic.rs
eve_sde_parser2/src/: error.rs  lib.rs  service.rs
eve_sde_parser2/src/service/: blueprint.rs  category_ids.rs  corporation.rs  dogma.rs  group_ids.rs  meta_group.rs  name.rs  planet_schematic.rs  race.rs  research_agent.rs  skin.rs  station.rs  type_id.rs  type_material.rs
market_analyzer/: Cargo.toml
market_analyzer/src/: main.rs  old.rs
moon_parser/: Cargo.toml
moon_parser/inputs/: in.csv
moon_parser/output/: out.csv
moon_parser/src/: main.rs
sde_parser/: Cargo.toml  Makefile
sde_parser/src/: blueprints.rs  dogma.rs  items.rs  lib.rs  main.rs  parser.rs
sde_parser/src/parser/: error.rs  reader.rs  type_ids.rs
server/: Cargo.toml  build.rs  caph.sqlite-shm  caph.sqlite-wal  dependencies.json  sqlx-data.json  systemd.service
server/assets/: additional_info.json  stations.json
server/migrations/: 1_base.sql  20220326201841_init.sql  20220529200024_moons.sql  20220816204429_dogma.down.sql  20220816204429_dogma.sql  20221105214438_assets.sql  20221123173541_projects.sql  20221126215143_project_members_remove.sql  20221209133830_structures.sql  2_assets.sql  3_project_members.sql  4_index_project_members.sql  5_login.sql
server/src/: alliance.rs  api.rs  asset.rs  auth.rs  auth_service.rs  auth_user.rs  blueprint.rs  cache.rs  character.rs  corporation.rs  error.rs  eve.rs  industry.rs  item.rs  lib.rs  main.rs  market_task.rs  metrics.rs  moon.rs  name.rs  project.rs  reprocessing.rs  server.rs  services.rs  structure.rs  tables.sql  task_service.rs  time.rs  timed_cache.rs  universe.rs  utils.rs
server/src/api/: blueprint.rs  item.rs  market.rs  region.rs  resolve.rs  sde.rs
server/src/auth/: api.rs  auth_character.rs  error.rs  service.rs  user.rs
server/src/cache/: item.rs  market.rs  sde.rs
server/src/character/: api.rs  service.rs
server/src/industry/: api.rs  (+2 more)
server/testdata/: caracal.json  naglfar.json  warden.json
web/: Cargo.toml  Makefile  download_img.sh  nginx.conf  package-lock.json  package.json  package.json.bk  tsconfig.json  tslint.json  vue.config.js  webpack.config.js
web/public/: index.html
web/src/: +  App.vue  app.rs  event_bus.ts  lib.rs  main.ts  pages.rs  router.ts  shims-vue.d.ts  switch.rs  utils.rs  utils.ts
web/static/: index.html
(+318 files in other folders)
