[package]
name = "eve"
version = "0.1.0"
authors = ["lholznagel"]
edition = "2018"

[dependencies]
log = "0.4.11"
loggify = "1.4.0"
num-format = "0.4.0"
prettytable-rs = "0.8.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.115", default-features = false, features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
tokio = { version = "0.2", features = ["full"] }