[package]
name = "caph_cli"
version = "0.1.0"
authors = ["Lars Holznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
clap = "3.0.0-beta.1"
caph_eve_online_api = { path = "../eve_api" }
indicatif = "0.15.0"
log = "0.4.11"
loggify = "1.4.0"
num-format = "0.4.0"
prettytable-rs = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
surf = "2.1.0"