[package]
name = "caph_collector"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
axum = { version = "0.3.0", features = ["headers"] }
caph_connector = { path = "../connector" }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.17"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["chrono", "runtime-tokio-rustls",
"postgres", "uuid", "offline", "json"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
uuid = { version = "0.8.2", features = ["v4"] }
