[package]
name = "caph_collector"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2021"

[dependencies]
axum = { version = "0.4.4", features = ["headers"] }
caph_connector = { path = "../connector" }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.19"
log = "0.4.14"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.76"
sqlx = { version = "0.5.10", features = ["chrono", "runtime-tokio-rustls",
"postgres", "uuid", "offline", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
