[package]
name = "collector"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
cachem_utils = { git = "https://github.com/lholznagel/cachem.git", rev = "811d92c6daa3dda093174e9e2361e0942b269a69" }
caph_eve_online_api = { path = "../eve_api" }
caph_eve_sde_parser = { path = "../eve_sde_parser" }
carina = { path = "../carina" }
futures = "0.3.12"
log = "0.4.13"
morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
tokio = { version = "1.0.2", features = ["full"] }
