[package]
name = "caph_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
base64 = "0.13.0"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
tracing = "0.1.34"
url = "2.2.2"
zip = "0.6.2"

sqlx = { version = "0.5.13", optional = true }

[features]
default = []
sqlx_types = ["sqlx"]
