[package]
name = "caph_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
tracing = "0.1.36"
url = "2.2.2"
zip = "0.6.2"

sqlx = { version = "0.6.1", optional = true }

[features]
default = []
sqlx_types = ["sqlx"]
