[package]
name = "caph_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.58"
base64 = "0.13.1"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
tracing = "0.1.37"
url = "2.3.1"
zip = "0.6.3"

sqlx = { version = "0.6.2", optional = true }

[features]
default = []
sqlx_types = ["sqlx"]
