[package]
name = "caph_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
caph_connector = { path = "../connector" }
futures = "0.3.19"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.76"
sqlx = { version = "0.5.10", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
