[package]
name = "corp_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
appraisal = { path = "../appraisal" }
caph_connector = { path = "../connector" }
dotenv = "0.15.0"
reqwest = "0.11.10"
sqlx = { version = "0.5.13", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
tokio = { version = "1.18.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber =  { version = "0.3.11", features = ["env-filter"] }
serde = { version = "1.0.137", features = ["derive"] }
num-format = "0.4.0"
