[package]
name = "corp_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
appraisal = { path = "../appraisal" }
caph_connector = { path = "../connector" }
dotenvy = "0.15.1"
reqwest = "0.11.11"
sqlx = { version = "0.6.1", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.15", features = ["env-filter"] }
serde = { version = "1.0.143", features = ["derive"] }
num-format = "0.4.0"
