[package]
name = "caph_db"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
cachem = { path = "../../cachem/cachem", features = ["derive"] }
log = "0.4.14"
metrix_exporter = { path = "../../metrix/exporter" }
morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
tokio = { version = "1.2.0", features = ["full"] }

serde = { version = "1.0.123", features = ["derive"], optional = true }

[features]
default    = []
with_serde = ["serde"]
