[package]
name = "caph_db_v2"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
chrono = "0.4.19"
cachem = { path = "../../cachem/cachem", features = ["derive"] }
caph_eve_data_wrapper = { path = "../eve_data_wrapper" }
log = "0.4.14"
morgan = { git = "https://github.com/lholznagel/morgan.git", rev = "624526038c210b142d2835fa77965064771ac192" }
tokio = { version = "1.2.0", features = ["full"] }

serde = { version = "1.0.123", features = ["derive"], optional = true }

[features]
default    = []
with_serde = ["serde"]
