[package]
name = "caph_eve_online_api"
version = "0.1.0"
authors = ["lholznagel"]
edition = "2018"

[dependencies]
log = "0.4.11"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
serde_json = "1.0.61"
