[package]
name = "caph_eve_data_wrapper"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
log = "0.4.14"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.14"
tokio = { version = "1.2.0", features = ["full"] }
url = "2.2.1"
zip = "0.5.11"
