[package]
name = "caph_eve_sde_parser"
version = "0.1.0"
authors = ["Lars Holznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
miniz_oxide = "0.4.3"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
