[package]
name = "caph_eve_sde_parser2"
version = "0.1.0"
authors = ["lholznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.14"
tokio = { version = "1.2.0", features = ["full"] }
zip = "0.5.11"

