[package]
name = "moon_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appraisal = { path = "../appraisal" }
csv = "1.1.6"
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.18.0", features = ["full"] }
