[package]
name = "sde_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
tracing = "0.1.35"
tracing-subscriber =  { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
