[package]
name = "sde_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
