[package]
name = "sde_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }
