[package]
name = "caph_server"
version = "0.1.0"
edition = "2021"

default-run = "caph_server"

[dependencies]
appraisal = { path = "../appraisal" }
async-trait = "0.1.58"
axum = { version = "0.5.17", features = ["headers"] }
base64 = "0.13.1"
caph_connector = { path = "../connector" }
chrono = "0.4.22"
dotenvy = "0.15.6"
futures = "0.3.25"
headers = "0.3.8"
hmac = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
warp = "0.3.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
