[package]
name = "caph_web"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.34"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
wasm-bindgen = "0.2.68"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.17.4"
yew-router = "0.14.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'KeyboardEvent',
]
